# FRCDesign.org

./: .gitattributes  .gitignore  404.html  CNAME  README.md  astro.config.mjs  build_animations.sh  generate_mkdocs_config.py  index.html  installdependencies.sh  installdependencies_insiders.sh  installdependencies_mac.sh  mkdocs.base.yml  mkdocs.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  runlocal.sh  runlocal_insiders.sh  runlocal_linux_unix.sh  setup.py  setup.sh  sitemap.xml  wrangler.jsonc
.devcontainer/: DockerFile  Dockerfile  devcontainer.json
.github/workflows/: checks.yml  ci.yaml  deploy-website.yaml  fork-preview.yml  test-build.yaml
animations/: ANIMATIONS.md  STYLE.md  build_animations.py
animations/animations/: plate.py  sketch_constraints.py
animations/common/: constraint.py  plate.py  sketch.py  sketch_animation.py  sketch_scene.py
animations/geometry/: tangent.py  vector.py
animations/style/: animation.py  color.py
animations/utils/: title_sequence.py
best-practices/: index.html
best-practices/assembly-setup/: index.html
best-practices/document-setup/: index.html
best-practices/feature-tree-setup/: index.html
best-practices/mastersketch-setup/: index.html
best-practices/sub-document-setup/: index.html
contribution/contributors/: index.html
contribution/mechanismContribution/: index.html
contribution/methodsOfContributing/: index.html
contribution/styleguide/: index.html
design-handbook/: index.html
design-handbook/strategic-design/: index.html
docs/: CNAME  Stage-1A.md  cad-examples.md  design-standards.md  featurescripts.md  index.md  krayonCAD.md  onshape-intro.md  page2.md  simplified.md  solidworks.md  starter-projects.md  starterprojects.md  styleguide.md  website-feature-guide.md  website-guide.md
docs/best-practices/: assembly-setup.md  document-setup.md  feature-tree-setup.md  hardware-design-standards.md  index.md  mastersketch-setup.md  origins.md  sub-document-setup.md
docs/cad-examples/: index.md
docs/contribution/: .meta.yml  contributors.md  mechanismContribution.md  methodsOfContributing.md  styleguide.md
docs/design-challenge/: .meta.yml  index.md
docs/design-examples/: index.md
docs/design-fundamentals/: .meta.yml  index.md  strategicDesign.md
docs/design-guide/: .meta.yml  index.md  stage4.md
docs/design-handbook/: index.md  strategic-design.md  strategicDesign.md
docs/design-standards/: 2-document-setup.md  (+14 more)
includes/: abbreviations.md
layouts/: default_page.yml  frcdesignlib.yml  homepage.yml  mechanism_fundamentals.yml  mechanism_fundamentals_tall.yml  mechanism_fundamentals_wide.yml  special-resource.yml
learning-course/: index.html
mechanism-examples/: index.html
overrides/: main.html
resources/: index.html
scripts/: check-local-links.mjs  social-cards.mjs
search/: search_index.json
solidworks/: index.html
src/: content.config.ts  middleware.ts
website-feature-guide/: index.html
(+1079 files in other folders)
