[project]
name = "frc-design"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Website
    "mkdocs-material[imaging]",
    "mkdocs-glightbox",
    "mkdocs-git-revision-date-localized-plugin",
    "pymdown-extensions",
    "pyyaml",
    "mkdocs-git-committers-plugin-2",

    # Animations
    "manim>=0.18.1",
    "numpy>=1.24.2",

    # Animation build script
    "thefuzz[speedup]>=0.19.0"
]

[tool.setuptools]
packages = ["library"]

[tool.setuptools.package-dir]
"" = "animations"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
